--- a/docs/references.bib
+++ b/docs/references.bib
@@ -5,23 +5,22 @@
 % Multi-Model Consensus and Self-Bias
 % =============================================================================
 
-@article{huang2024large,
+@article{huang2023large,
   author    = {Huang, Jie and others},
   title     = {Large Language Models Cannot Self-Correct Reasoning Yet},
   journal   = {arXiv preprint arXiv:2310.01798},
-  year      = {2024},
-  note      = {Demonstrates that LLMs exhibit self-bias when asked to verify
-               their own outputs. Motivates alice's second-opinion protocol.}
+  year      = {2023},
+  note      = {LLMs struggle to reliably evaluate their own outputs.
+               Motivates using a separate reviewer agent.}
 }
 
-@article{liang2024encouraging,
+@article{liang2023encouraging,
   author    = {Liang, Tian and others},
   title     = {Encouraging Divergent Thinking in Large Language Models
                through Multi-Agent Debate},
   journal   = {arXiv preprint arXiv:2305.19118},
-  year      = {2024},
-  note      = {Multi-agent debate improves reasoning accuracy. Informs the
-               alice/codex/gemini consensus pattern.}
+  year      = {2023},
+  note      = {Multi-agent debate can improve reasoning accuracy.}
 }
 
 @article{du2023improving,
@@ -55,16 +54,6 @@
   year      = {2023},
   note      = {Role-based multi-agent framework with structured outputs.
                Influences agent role definitions and output schemas.}
-}
-
-@article{madaan2024self,
-  author    = {Madaan, Aman and others},
-  title     = {Self-Refine: Iterative Refinement with Self-Feedback},
-  journal   = {Advances in Neural Information Processing Systems},
-  volume    = {36},
-  year      = {2024},
-  note      = {Iterative self-improvement pattern. Informs the loop command's
-               iteration model. Also notes self-refinement limits.}
 }
 
 % =============================================================================
